-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b89
-
sparc
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8142694 | emb-9 | Christian Thalinger | P2 | Resolved | Fixed | team |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/233845.iggy/s/hotspot/src/share/vm/jvmci/jvmciRuntime.cpp:783), pid=24247, tid=17
# guarantee(heap_end < allocation_end) failed: heap end too close to end of address space (might lead to erroneous TLAB allocations)
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151012233845.iggy.8139454-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151012233845.iggy.8139454-b00, compiled mode, tiered, jvmci, parallel gc, solaris-sparc)
# Core dump will be written. Default location: /export/local/aurora/sandbox/results/workDir/compiler/jvmci/JVM_GetJVMCIRuntimeTest/core or core.24247
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/export/local/aurora/CommonData/j2se_hotspot/hotspot/test/compiler/jvmci -Dtest.src.path=/export/local/aurora/CommonData/j2se_hotspot/hotspot/test/compiler/jvmci:/export/local/aurora/CommonData/j2se_hotspot/hotspot/test/testlibrary:/export/local/aurora/CommonData/j2se_hotspot/hotspot/test -Dtest.classes=/export/local/aurora/sandbox/results/workDir/classes/0/compiler/jvmci -Dtest.class.path=/export/local/aurora/sandbox/results/workDir/classes/0/compiler/jvmci:/export/local/aurora/sandbox/results/workDir/classes/0/testlibrary:/export/local/aurora/sandbox/results/workDir/classes/0 -Dtest.vm.opts=-d64 -Dtest.tool.vm.opts=-J-d64 -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -d64 -Xcomp -server -XX:+UseParallelGC -XX:+UseParallelOldGC -Xms120m -XX:MaxRAMFraction=8 -XX:+IgnoreUnrecognizedVMOptions -XX:-UseCompressedOops -XX:+UseNUMA -Dtest.jdk=/export/local/aurora/CommonData/jdk -Dcompile.jdk=/export/local/aurora/CommonData/jdk -Dtest.timeout.factor=3.0 -Dtest.nativepath=/export/local/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -Xcomp -Xcomp -XX:+UseParallelGC -XX:+UseParallelOldGC -Xms120m -XX:MaxRAMFraction=8 -XX:+IgnoreUnrecognizedVMOptions -XX:-UseCompressedOops -XX:+UseNUMA -Djava.library.path=/export/local/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -XX:+UnlockExperimentalVMOptions -Dcompiler.jvmci.JVM_GetJVMCIRuntimeTest.positive=true -XX:+EnableJVMCI com.sun.javatest.regtest.agent.MainWrapper /export/local/aurora/sandbox/results/workDir/classes/0/compiler/jvmci/compiler.jvmci.JVM_GetJVMCIRuntimeTest.jta
Host: slc03tih, Sparcv9 64 bit 2848 MHz, 4 cores, 8G, Oracle Solaris 11 11/11 SPARC
Time: Tue Oct 13 14:37:47 2015 UTC elapsed time: 12 seconds (0d 0h 0m 12s)
--------------- T H R E A D ---------------
Current thread (0x0000000100f50800): JavaThread "MainThread" [_thread_in_vm, id=17, stack(0xffffffff60500000,0xffffffff60600000)]
Stack: [0xffffffff60500000,0xffffffff60600000], sp=0xffffffff605f6b40, free space=986k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17237e4] void VMError::report_and_die()+0x6fc
V [libjvm.so+0xb2bb00] void report_vm_error(const char*,int,const char*,const char*)+0x70
V [libjvm.so+0x102bc4c] JVM_RegisterJVMCINatives+0x284
J 1227 jdk.vm.ci.hotspot.CompilerToVM.registerNatives()V (0 bytes) @ 0xffffffff6c09c548 [0xffffffff6c09c280+0x2c8]
J 1225 C1 jdk.vm.ci.hotspot.CompilerToVM.initialize()V (81 bytes) @ 0xffffffff64f037a0 [0xffffffff64f03640+0x160]
J 1223 C1 jdk.vm.ci.hotspot.CompilerToVM.<clinit>()V (4 bytes) @ 0xffffffff64f03244 [0xffffffff64f031a0+0xa4]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xdc3e1c] void InstanceKlass::call_class_initializer_impl(instanceKlassHandle,Thread*)+0x2c4
V [libjvm.so+0xdc1308] void InstanceKlass::initialize_impl(instanceKlassHandle,Thread*)+0x4c0
V [libjvm.so+0xdbf820] void InstanceKlass::initialize(Thread*)+0xa0
V [libjvm.so+0x89eb7c] void Runtime1::new_instance(JavaThread*,Klass*)+0x294
v ~RuntimeStub::new_instance Runtime1 stub
J 1222 C1 jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.<init>()V (430 bytes) @ 0xffffffff64f00dc8 [0xffffffff64f00020+0xda8]
J 1154 C1 jdk.vm.ci.hotspot.HotSpotJVMCIRuntime$DelayedInit.<clinit>()V (393 bytes) @ 0xffffffff64ed9d70 [0xffffffff64ed9260+0xb10]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xdc3e1c] void InstanceKlass::call_class_initializer_impl(instanceKlassHandle,Thread*)+0x2c4
V [libjvm.so+0xdc1308] void InstanceKlass::initialize_impl(instanceKlassHandle,Thread*)+0x4c0
V [libjvm.so+0xdbf820] void InstanceKlass::initialize(Thread*)+0xa0
V [libjvm.so+0x11a180c] void LinkResolver::resolve_static_call(CallInfo&,const LinkInfo&,bool,Thread*)+0x12c
V [libjvm.so+0x11a52d0] void LinkResolver::resolve_invokestatic(CallInfo&,constantPoolHandle,int,Thread*)+0x100
V [libjvm.so+0x11a4cfc] void LinkResolver::resolve_invoke(CallInfo&,Handle,constantPoolHandle,int,Bytecodes::Code,Thread*)+0x9c
V [libjvm.so+0x1520da4] Handle SharedRuntime::find_callee_info_helper(JavaThread*,vframeStream&,Bytecodes::Code&,CallInfo&,Thread*)+0xb0c
V [libjvm.so+0x15226b8] methodHandle SharedRuntime::resolve_sub_helper(JavaThread*,bool,bool,Thread*)+0x198
V [libjvm.so+0x1521ee0] methodHandle SharedRuntime::resolve_helper(JavaThread*,bool,bool,Thread*)+0x50
V [libjvm.so+0x1524c9c] unsigned char*SharedRuntime::resolve_static_call_C(JavaThread*)+0x1ec
v ~RuntimeStub::resolve_static_call
J 1152 C1 jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.runtime()Ljdk/vm/ci/hotspot/HotSpotJVMCIRuntime; (24 bytes) @ 0xffffffff64ed89f0 [0xffffffff64ed8920+0xd0]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xe2ec40] void JavaCalls::call_static(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x398
V [libjvm.so+0xe2f514] void JavaCalls::call_static(JavaValue*,KlassHandle,Symbol*,Symbol*,Thread*)+0x64
V [libjvm.so+0x102902c] Handle JVMCIRuntime::callStatic(const char*,const char*,const char*,JavaCallArguments*,Thread*)+0x224
V [libjvm.so+0x1029d08] void JVMCIRuntime::initialize_HotSpotJVMCIRuntime(Thread*)+0x968
V [libjvm.so+0x1028898] JVM_GetJVMCIRuntime+0x210
J 1147 jdk.vm.ci.runtime.JVMCI.initializeRuntime()Ljdk/vm/ci/runtime/JVMCIRuntime; (0 bytes) @ 0xffffffff6c0914c8 [0xffffffff6c091200+0x2c8]
J 1145 C1 jdk.vm.ci.runtime.JVMCI.<clinit>()V (15 bytes) @ 0xffffffff64ed78c4 [0xffffffff64ed7820+0xa4]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xdc3e1c] void InstanceKlass::call_class_initializer_impl(instanceKlassHandle,Thread*)+0x2c4
V [libjvm.so+0xdc1308] void InstanceKlass::initialize_impl(instanceKlassHandle,Thread*)+0x4c0
V [libjvm.so+0xdbf820] void InstanceKlass::initialize(Thread*)+0xa0
V [libjvm.so+0x14d091c] oop Reflection::invoke(instanceKlassHandle,methodHandle,Handle,bool,objArrayHandle,BasicType,objArrayHandle,bool,Thread*)+0x94
V [libjvm.so+0x14d462c] oop Reflection::invoke_method(oop,Handle,objArrayHandle,Thread*)+0x67c
V [libjvm.so+0xfc4024] JVM_InvokeMethod+0x4ac
C [libjava.so+0x167b0] Java_sun_reflect_NativeMethodAccessorImpl_invoke0+0x18
J 347 sun.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (0 bytes) @ 0xffffffff6c028cf8 [0xffffffff6c028a00+0x2f8]
j sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100
J 344 C2 sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (10 bytes) @ 0xffffffff6c0283a4 [0xffffffff6c028360+0x44]
J 334 C1 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (62 bytes) @ 0xffffffff64ce3ff8 [0xffffffff64ce3ec0+0x138]
J 1144 C1 compiler.jvmci.JVM_GetJVMCIRuntimeTest.runTest()V (60 bytes) @ 0xffffffff64ed6598 [0xffffffff64ed63e0+0x1b8]
J 1140 C1 compiler.jvmci.JVM_GetJVMCIRuntimeTest.main([Ljava/lang/String;)V (11 bytes) @ 0xffffffff64ed4bfc [0xffffffff64ed49c0+0x23c]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0x14d36b8] oop Reflection::invoke(instanceKlassHandle,methodHandle,Handle,bool,objArrayHandle,BasicType,objArrayHandle,bool,Thread*)+0x2e30
V [libjvm.so+0x14d462c] oop Reflection::invoke_method(oop,Handle,objArrayHandle,Thread*)+0x67c
V [libjvm.so+0xfc4024] JVM_InvokeMethod+0x4ac
C [libjava.so+0x167b0] Java_sun_reflect_NativeMethodAccessorImpl_invoke0+0x18
J 347 sun.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (0 bytes) @ 0xffffffff6c028cf8 [0xffffffff6c028a00+0x2f8]
j sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100
J 344 C2 sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (10 bytes) @ 0xffffffff6c0283a4 [0xffffffff6c028360+0x44]
J 334 C1 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (62 bytes) @ 0xffffffff64ce3ff8 [0xffffffff64ce3ec0+0x138]
J 1114 C1 com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V (373 bytes) @ 0xffffffff64ebc06c [0xffffffff64ebb240+0xe2c]
J 1110 C1 java.lang.Thread.run()V (17 bytes) @ 0xffffffff64eb92ec [0xffffffff64eb9120+0x1cc]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xe2dad0] void JavaCalls::call_virtual(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x1f8
V [libjvm.so+0xe2dbf8] void JavaCalls::call_virtual(JavaValue*,Handle,KlassHandle,Symbol*,Symbol*,Thread*)+0xd8
V [libjvm.so+0xfb0458] void thread_entry(JavaThread*,Thread*)+0x100
V [libjvm.so+0x1664618] void JavaThread::thread_main_inner()+0x268
V [libjvm.so+0x1664338] void JavaThread::run()+0x418
V [libjvm.so+0x13b0284] java_start+0x41c
C [libc.so.1+0xe25bc] _lwp_start+0x8
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/233845.iggy/s/hotspot/src/share/vm/jvmci/jvmciRuntime.cpp:783), pid=24247, tid=17
# guarantee(heap_end < allocation_end) failed: heap end too close to end of address space (might lead to erroneous TLAB allocations)
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151012233845.iggy.8139454-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151012233845.iggy.8139454-b00, compiled mode, tiered, jvmci, parallel gc, solaris-sparc)
# Core dump will be written. Default location: /export/local/aurora/sandbox/results/workDir/compiler/jvmci/JVM_GetJVMCIRuntimeTest/core or core.24247
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/export/local/aurora/CommonData/j2se_hotspot/hotspot/test/compiler/jvmci -Dtest.src.path=/export/local/aurora/CommonData/j2se_hotspot/hotspot/test/compiler/jvmci:/export/local/aurora/CommonData/j2se_hotspot/hotspot/test/testlibrary:/export/local/aurora/CommonData/j2se_hotspot/hotspot/test -Dtest.classes=/export/local/aurora/sandbox/results/workDir/classes/0/compiler/jvmci -Dtest.class.path=/export/local/aurora/sandbox/results/workDir/classes/0/compiler/jvmci:/export/local/aurora/sandbox/results/workDir/classes/0/testlibrary:/export/local/aurora/sandbox/results/workDir/classes/0 -Dtest.vm.opts=-d64 -Dtest.tool.vm.opts=-J-d64 -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -d64 -Xcomp -server -XX:+UseParallelGC -XX:+UseParallelOldGC -Xms120m -XX:MaxRAMFraction=8 -XX:+IgnoreUnrecognizedVMOptions -XX:-UseCompressedOops -XX:+UseNUMA -Dtest.jdk=/export/local/aurora/CommonData/jdk -Dcompile.jdk=/export/local/aurora/CommonData/jdk -Dtest.timeout.factor=3.0 -Dtest.nativepath=/export/local/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -Xcomp -Xcomp -XX:+UseParallelGC -XX:+UseParallelOldGC -Xms120m -XX:MaxRAMFraction=8 -XX:+IgnoreUnrecognizedVMOptions -XX:-UseCompressedOops -XX:+UseNUMA -Djava.library.path=/export/local/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -XX:+UnlockExperimentalVMOptions -Dcompiler.jvmci.JVM_GetJVMCIRuntimeTest.positive=true -XX:+EnableJVMCI com.sun.javatest.regtest.agent.MainWrapper /export/local/aurora/sandbox/results/workDir/classes/0/compiler/jvmci/compiler.jvmci.JVM_GetJVMCIRuntimeTest.jta
Host: slc03tih, Sparcv9 64 bit 2848 MHz, 4 cores, 8G, Oracle Solaris 11 11/11 SPARC
Time: Tue Oct 13 14:37:47 2015 UTC elapsed time: 12 seconds (0d 0h 0m 12s)
--------------- T H R E A D ---------------
Current thread (0x0000000100f50800): JavaThread "MainThread" [_thread_in_vm, id=17, stack(0xffffffff60500000,0xffffffff60600000)]
Stack: [0xffffffff60500000,0xffffffff60600000], sp=0xffffffff605f6b40, free space=986k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17237e4] void VMError::report_and_die()+0x6fc
V [libjvm.so+0xb2bb00] void report_vm_error(const char*,int,const char*,const char*)+0x70
V [libjvm.so+0x102bc4c] JVM_RegisterJVMCINatives+0x284
J 1227 jdk.vm.ci.hotspot.CompilerToVM.registerNatives()V (0 bytes) @ 0xffffffff6c09c548 [0xffffffff6c09c280+0x2c8]
J 1225 C1 jdk.vm.ci.hotspot.CompilerToVM.initialize()V (81 bytes) @ 0xffffffff64f037a0 [0xffffffff64f03640+0x160]
J 1223 C1 jdk.vm.ci.hotspot.CompilerToVM.<clinit>()V (4 bytes) @ 0xffffffff64f03244 [0xffffffff64f031a0+0xa4]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xdc3e1c] void InstanceKlass::call_class_initializer_impl(instanceKlassHandle,Thread*)+0x2c4
V [libjvm.so+0xdc1308] void InstanceKlass::initialize_impl(instanceKlassHandle,Thread*)+0x4c0
V [libjvm.so+0xdbf820] void InstanceKlass::initialize(Thread*)+0xa0
V [libjvm.so+0x89eb7c] void Runtime1::new_instance(JavaThread*,Klass*)+0x294
v ~RuntimeStub::new_instance Runtime1 stub
J 1222 C1 jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.<init>()V (430 bytes) @ 0xffffffff64f00dc8 [0xffffffff64f00020+0xda8]
J 1154 C1 jdk.vm.ci.hotspot.HotSpotJVMCIRuntime$DelayedInit.<clinit>()V (393 bytes) @ 0xffffffff64ed9d70 [0xffffffff64ed9260+0xb10]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xdc3e1c] void InstanceKlass::call_class_initializer_impl(instanceKlassHandle,Thread*)+0x2c4
V [libjvm.so+0xdc1308] void InstanceKlass::initialize_impl(instanceKlassHandle,Thread*)+0x4c0
V [libjvm.so+0xdbf820] void InstanceKlass::initialize(Thread*)+0xa0
V [libjvm.so+0x11a180c] void LinkResolver::resolve_static_call(CallInfo&,const LinkInfo&,bool,Thread*)+0x12c
V [libjvm.so+0x11a52d0] void LinkResolver::resolve_invokestatic(CallInfo&,constantPoolHandle,int,Thread*)+0x100
V [libjvm.so+0x11a4cfc] void LinkResolver::resolve_invoke(CallInfo&,Handle,constantPoolHandle,int,Bytecodes::Code,Thread*)+0x9c
V [libjvm.so+0x1520da4] Handle SharedRuntime::find_callee_info_helper(JavaThread*,vframeStream&,Bytecodes::Code&,CallInfo&,Thread*)+0xb0c
V [libjvm.so+0x15226b8] methodHandle SharedRuntime::resolve_sub_helper(JavaThread*,bool,bool,Thread*)+0x198
V [libjvm.so+0x1521ee0] methodHandle SharedRuntime::resolve_helper(JavaThread*,bool,bool,Thread*)+0x50
V [libjvm.so+0x1524c9c] unsigned char*SharedRuntime::resolve_static_call_C(JavaThread*)+0x1ec
v ~RuntimeStub::resolve_static_call
J 1152 C1 jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.runtime()Ljdk/vm/ci/hotspot/HotSpotJVMCIRuntime; (24 bytes) @ 0xffffffff64ed89f0 [0xffffffff64ed8920+0xd0]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xe2ec40] void JavaCalls::call_static(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x398
V [libjvm.so+0xe2f514] void JavaCalls::call_static(JavaValue*,KlassHandle,Symbol*,Symbol*,Thread*)+0x64
V [libjvm.so+0x102902c] Handle JVMCIRuntime::callStatic(const char*,const char*,const char*,JavaCallArguments*,Thread*)+0x224
V [libjvm.so+0x1029d08] void JVMCIRuntime::initialize_HotSpotJVMCIRuntime(Thread*)+0x968
V [libjvm.so+0x1028898] JVM_GetJVMCIRuntime+0x210
J 1147 jdk.vm.ci.runtime.JVMCI.initializeRuntime()Ljdk/vm/ci/runtime/JVMCIRuntime; (0 bytes) @ 0xffffffff6c0914c8 [0xffffffff6c091200+0x2c8]
J 1145 C1 jdk.vm.ci.runtime.JVMCI.<clinit>()V (15 bytes) @ 0xffffffff64ed78c4 [0xffffffff64ed7820+0xa4]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xdc3e1c] void InstanceKlass::call_class_initializer_impl(instanceKlassHandle,Thread*)+0x2c4
V [libjvm.so+0xdc1308] void InstanceKlass::initialize_impl(instanceKlassHandle,Thread*)+0x4c0
V [libjvm.so+0xdbf820] void InstanceKlass::initialize(Thread*)+0xa0
V [libjvm.so+0x14d091c] oop Reflection::invoke(instanceKlassHandle,methodHandle,Handle,bool,objArrayHandle,BasicType,objArrayHandle,bool,Thread*)+0x94
V [libjvm.so+0x14d462c] oop Reflection::invoke_method(oop,Handle,objArrayHandle,Thread*)+0x67c
V [libjvm.so+0xfc4024] JVM_InvokeMethod+0x4ac
C [libjava.so+0x167b0] Java_sun_reflect_NativeMethodAccessorImpl_invoke0+0x18
J 347 sun.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (0 bytes) @ 0xffffffff6c028cf8 [0xffffffff6c028a00+0x2f8]
j sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100
J 344 C2 sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (10 bytes) @ 0xffffffff6c0283a4 [0xffffffff6c028360+0x44]
J 334 C1 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (62 bytes) @ 0xffffffff64ce3ff8 [0xffffffff64ce3ec0+0x138]
J 1144 C1 compiler.jvmci.JVM_GetJVMCIRuntimeTest.runTest()V (60 bytes) @ 0xffffffff64ed6598 [0xffffffff64ed63e0+0x1b8]
J 1140 C1 compiler.jvmci.JVM_GetJVMCIRuntimeTest.main([Ljava/lang/String;)V (11 bytes) @ 0xffffffff64ed4bfc [0xffffffff64ed49c0+0x23c]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0x14d36b8] oop Reflection::invoke(instanceKlassHandle,methodHandle,Handle,bool,objArrayHandle,BasicType,objArrayHandle,bool,Thread*)+0x2e30
V [libjvm.so+0x14d462c] oop Reflection::invoke_method(oop,Handle,objArrayHandle,Thread*)+0x67c
V [libjvm.so+0xfc4024] JVM_InvokeMethod+0x4ac
C [libjava.so+0x167b0] Java_sun_reflect_NativeMethodAccessorImpl_invoke0+0x18
J 347 sun.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (0 bytes) @ 0xffffffff6c028cf8 [0xffffffff6c028a00+0x2f8]
j sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100
J 344 C2 sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (10 bytes) @ 0xffffffff6c0283a4 [0xffffffff6c028360+0x44]
J 334 C1 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (62 bytes) @ 0xffffffff64ce3ff8 [0xffffffff64ce3ec0+0x138]
J 1114 C1 com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V (373 bytes) @ 0xffffffff64ebc06c [0xffffffff64ebb240+0xe2c]
J 1110 C1 java.lang.Thread.run()V (17 bytes) @ 0xffffffff64eb92ec [0xffffffff64eb9120+0x1cc]
v ~StubRoutines::call_stub
V [libjvm.so+0xe2fdac] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x55c
V [libjvm.so+0xe2dad0] void JavaCalls::call_virtual(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x1f8
V [libjvm.so+0xe2dbf8] void JavaCalls::call_virtual(JavaValue*,Handle,KlassHandle,Symbol*,Symbol*,Thread*)+0xd8
V [libjvm.so+0xfb0458] void thread_entry(JavaThread*,Thread*)+0x100
V [libjvm.so+0x1664618] void JavaThread::thread_main_inner()+0x268
V [libjvm.so+0x1664338] void JavaThread::run()+0x418
V [libjvm.so+0x13b0284] java_start+0x41c
C [libc.so.1+0xe25bc] _lwp_start+0x8
- backported by
-
JDK-8142694 JVMCI : guarantee(heap_end < allocation_end) failed on some sparcv9 hosts
-
- Resolved
-
- duplicates
-
JDK-8139558 [JVMCI] SPARC hits: guarantee(heap_end < allocation_end) failed: heap end too close to end of address space (might lead to erroneous TLAB allocations)
-
- Closed
-