8139545: JVMCI : guarantee(heap_end < allocation_end) failed on some sparcv9 hosts

Reviewed-by: iveresov, kvn